@@ -10,6 +10,7 @@
 -revise imageloader processing.
 -revise sprite groupcollide for dict obj key.
 -add sprite layeredupdates.
+-add cursors get_cursor_types.
 
 0.24    2021-04-28
 -revise rect move/inflate args processing.
